--- a/dom/style.css
+++ b/dom/style.css
@@ -1,3 +1,17 @@
 *{
     background-color: cadetblue;
 }
+.box{
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: orange;
+}
+
+.box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
