--- a/dom/style.css
+++ b/dom/style.css
@@ -15,3 +15,16 @@
     gap: 10px;
 }
 
+.input-1{
+    padding: 10px;
+    background-color: white;
+    width: 40%;
+}
+button{
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    color: wheat;
+    font-weight: bold;
+    background-color: royalblue;
+}
