--- a/dom/style.css
+++ b/dom/style.css
@@ -24,7 +24,8 @@ button{
     padding: 10px 15px;
     border: none;
     border-radius: 5px;
-    color: wheat;
+    color: white;
     font-weight: bold;
     background-color: royalblue;
+    cursor: pointer;
 }
