--- a/dom/style.css
+++ b/dom/style.css
@@ -29,3 +29,14 @@ button{
     background-color: royalblue;
     cursor: pointer;
 }
+.user-div{
+    padding: 20px;
+    border: 1px solid red;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+}
+.user-container{
+    display: flex;
+    flex-wrap: wrap;
+}
